--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hitachitechnicaltest">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.view.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Hitachitechnicaltest">
             <intent-filter>
