Add search user page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.detail.view.UserDetailActivity" />
+        <activity android:name=".ui.search.view.SearchUserActivity" />
     </application>
 
 </manifest>
