--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,12 @@ okhttp = "5.1.0"
 coroutines = "1.10.2"
 chucker = "4.2.0"
 glide = "4.16.0"
+mockitoCore = "5.19.0"
+mockitoInline = "5.2.0"
+mockitoKotlin = "6.0.0"
+espresso = "3.7.0"
+coreTesting = "2.2.0"
+kotlinCoroutineTest = "1.10.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -53,6 +59,14 @@ chucker-debug = { module = "com.github.chuckerteam.chucker:library", version.ref
 #Glide
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+
+# Mockito
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
+espresso = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "espresso" }
+core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinCoroutineTest" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
